chatbot/deployment/rasa-deployment-1worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rasa-1worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rasa
  template:
    metadata:
      labels:
        app: rasa
    spec:
      containers:
      - name: rasa
        image: manuelmorullo/rasa-chatbot:latest
        args:
          - run
          - --enable-api
          - --cors
          - "*"
          - --credentials
          - /app/credentials.yml
          - --endpoints
          - /app/endpoints.yml
          - --debug
          - -m
          - /app/models
        ports:
          - containerPort: 5005
        resources:
          requests:
            cpu: "1"
            memory: "2Gi"
          limits:
            cpu: "1"
            memory: "2Gi"
        volumeMounts:
          - name: models-volume
            mountPath: /app/models
          - name: config-volume
            mountPath: /app/credentials.yml
            subPath: credentials.yml
          - name: rasa-endpoints-volume
            mountPath: /app/endpoints.yml
            subPath: endpoints.yml

      volumes:
        - name: models-volume
          hostPath:
            path: /home/manu/asistente-sau/chatbot/models
            type: Directory
        - name: config-volume
          emptyDir: {}
        - name: rasa-credentials-template
          configMap:
            name: rasa-credentials-template-cm
        - name: rasa-endpoints-volume
          configMap:
            name: rasa-endpoints-cm
