chatbot/deployment/rasa-deployment-2worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rasa-2workers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rasa
  template:
    metadata:
      labels:
        app: rasa
    spec:
      containers:
      - name: rasa
        image: manuelmorullo/rasa-chatbot:latest
        args:
          - run
          - --enable-api
          - --cors
          - "*"
          - --credentials
          - /app/credentials.yml
        ports:
        - containerPort: 5005
        resources:
          requests:
            cpu: "2"
            memory: "1843Mi"
          limits:
            cpu: "2"
            memory: "1843Mi"
        volumeMounts:
        - name: models-volume
          mountPath: /app/models
        - name: config-volume
          mountPath: /app/credentials.yml
          subPath: credentials.yml
        - name: rasa-endpoints-volume
          mountPath: /app/endpoints.yml
          subPath: endpoints.yml

      volumes:
      - name: models-volume
        hostPath:
          path: /home/manuel/asistente-sau/chatbot/models
          type: Directory
      - name: config-volume
        emptyDir: {}
      - name: rasa-credentials-template
        configMap:
          name: rasa-credentials-template-cm
      - name: rasa-endpoints-volume
        configMap:
          name: rasa-endpoints-cm
