chatbot/deployment/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379  # Puerto expuesto internamente en el clúster
      targetPort: 6379
